--- a/dao-web-app/src/components/Proposal/Create/CreateProposal.scss
+++ b/dao-web-app/src/components/Proposal/Create/CreateProposal.scss
@@ -23,6 +23,12 @@
   overflow-y: auto;
   // width: calc(100% - 30px);
   overflow-x: hidden;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
 
   .header {
